prevent wrapping on toml

--- a/src/components/Toml.module.css
+++ b/src/components/Toml.module.css
@@ -6,6 +6,7 @@
   border-radius: .25ch;
   border: solid var(--s-6) var(--color-lightish);
   width: 100%;
+  overflow-x: auto;
 }
 
 .groupHead {
@@ -16,7 +17,6 @@
   display: grid;
   grid-template-columns: min-content 1fr;
   column-gap: 1ch;
-  overflow: hidden;
 }
 
 .key {
@@ -24,6 +24,7 @@
 }
 
 .val {
+  text-wrap: nowrap;
   & * {
     color: #2C65B5;
   }
